arc-script-old/tests/unit/src/snapshots/hir@pipe.arc-2.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc

---
[-- Found 1 errors --],
error: Type mismatch
   ┌─ <FILE-NAME>
   │
19 │     val d: (i32, i32) = (a, a) | b | (c, c);
   │                         ^^^^^^^^^^^^^^^^^^^ (fun(i32): i32, fun(i32): i32) != fun(('52, '53)): i32


